# cargo-ramdisk

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
src/: config.rs  main.rs
